--- a/TFG.ipynb
+++ b/TFG.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "id": "df3f7146-9352-49fd-a642-05ea72740dc7",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from tensorflow.keras import layers\n",
-    "from tensorflow.keras.applications import InceptionV3, MobileNetV2\n",
+    "from tensorflow.keras.applications import InceptionV3, MobileNetV2, EfficientNetV2B0 \n",
     "from tensorflow.keras import Model\n",
     "from tensorflow.keras.layers import Input, GlobalAveragePooling2D, Dense, Dropout, BatchNormalization\n",
     "from tensorflow.keras.optimizers import Adam\n",
@@ -1509,9 +1509,138 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af2fc254-d041-40c5-8870-3aff48737e05",
+   "metadata": {},
+   "source": [
+    "### EfficientNetV2B0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "cebcdd35-f3bc-4e84-b412-0e4de1bcaf78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/efficientnet_v2/efficientnetv2-b0_notop.h5\n",
+      "24274472/24274472 [==============================] - 2s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "EfficientNetV2B0_base_model = EfficientNetV2B0(input_shape = (224, 224, 3), include_top = False, weights = 'imagenet')\n",
+    "EfficientNetV2B0.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "038c095e-8a29-4947-b323-f3050deb0a5e",
+   "metadata": {},
+   "source": [
+    "#### Freeze and Feature Extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "8f651d36-1acd-4a7f-bad7-ddd77706ac03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_3\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_8 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      "                                                                 \n",
+      " efficientnetv2-b0 (Function  (None, 7, 7, 1280)       5919312   \n",
+      " al)                                                             \n",
+      "                                                                 \n",
+      " global_average_pooling2d_3   (None, 1280)             0         \n",
+      " (GlobalAveragePooling2D)                                        \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 3)                 3843      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 5,923,155\n",
+      "Trainable params: 5,862,547\n",
+      "Non-trainable params: 60,608\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "EfficientNetV2B0_inputs = Input(shape = (224, 224, 3))\n",
+    "\n",
+    "EfficientNetV2B0_x = tf.keras.applications.efficientnet_v2.preprocess_input(EfficientNetV2B0_inputs)\n",
+    "\n",
+    "EfficientNetV2B0_x = EfficientNetV2B0_base_model(EfficientNetV2B0_x)\n",
+    "\n",
+    "EfficientNetV2B0_x = GlobalAveragePooling2D()(EfficientNetV2B0_x)\n",
+    "\n",
+    "# EfficientNetV2B0_x = Dropout(0.2)(EfficientNetV2B0_x)\n",
+    "\n",
+    "EfficientNetV2B0_outputs = Dense(3, activation = 'softmax')(EfficientNetV2B0_x)\n",
+    "\n",
+    "EfficientNetV2B0_model = Model(EfficientNetV2B0_inputs, EfficientNetV2B0_outputs)\n",
+    "\n",
+    "EfficientNetV2B0_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "78a3787b-5b40-4ed3-b8f4-b9a0ce86b207",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "270"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(EfficientNetV2B0_base_model.layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "9df0c9ae-1205-47b9-8f5b-09929dae0ca4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EfficientNetV2B0_model.compile(loss = 'sparse_categorical_crossentropy',\n",
+    "              optimizer = Adam(learning_rate = 0.001),\n",
+    "              metrics = ['accuracy'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb3ef2f1-c67b-41b9-92c9-48d21189b694",
+   "id": "9647e0a8-8373-47a0-9425-946a26f503c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EfficientNetV2B0_history = EfficientNetV2B0_model.fit(X_train, y_train, epochs = EPOCHS, validation_data = (X_val, y_val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b05ae0a9-bb7f-45b8-b940-9f32ee9fa9b4",
    "metadata": {},
    "outputs": [],
    "source": []
