--- a/TFG.ipynb
+++ b/TFG.ipynb
@@ -26,7 +26,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras import layers\n",
-    "from tensorflow.keras.applications import InceptionV3, MobileNetV2, DenseNet201, EfficientNetV2B0, ResNet50V2 \n",
+    "from tensorflow.keras.applications import InceptionV3, MobileNetV2, DenseNet201, EfficientNetV2B0, ResNet50V2, VGG16 \n",
     "from tensorflow.keras import Model, Sequential\n",
     "from tensorflow.keras.layers import Input, GlobalAveragePooling2D, Dense, Dropout, RandomFlip, RandomRotation, RandomZoom, RandomTranslation\n",
     "from tensorflow.keras.optimizers import Adam\n",
@@ -1719,9 +1719,9 @@
    "source": [
     "resNet50V2_inputs = Input(shape = (224, 224, 3))\n",
     "\n",
-    "# resNet50V2_x = data_augmentation(resNet50V2_inputs)\n",
+    "resNet50V2_x = data_augmentation(resNet50V2_inputs)\n",
     "\n",
-    "resNet50V2_x = tf.keras.applications.resnet_v2.preprocess_input(resNet50V2_inputs)\n",
+    "resNet50V2_x = tf.keras.applications.resnet_v2.preprocess_input(resNet50V2_x)\n",
     "\n",
     "resNet50V2_x = resNet50V2_base_model(resNet50V2_x)\n",
     "\n",
@@ -1763,7 +1763,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resNet50V2_history = resNet50V2_model.fit(X_train, y_train, epochs = EPOCHS, validation_data = (X_val, y_val))"
+    "resNet50V2_history = resNet50V2_model.fit(X_train_augmented, y_train_augmented, epochs = EPOCHS, validation_data = (X_val, y_val))"
    ]
   },
   {
@@ -1806,7 +1806,7 @@
    "outputs": [],
    "source": [
     "resNet50V2_base_model.trainable = True\n",
-    "for layer in resNet50V2_base_model.layers[:-50]:\n",
+    "for layer in resNet50V2_base_model.layers[:-20]:\n",
     "    layer.trainable = False"
    ]
   },
@@ -1839,7 +1839,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resNet50V2_history_fine = resNet50V2_model.fit(X_train, y_train, epochs = EPOCHS * 2, initial_epoch = EPOCHS, validation_data = (X_val, y_val))"
+    "resNet50V2_history_fine = resNet50V2_model.fit(X_train_augmented, y_train_augmented, epochs = EPOCHS * 2, initial_epoch = EPOCHS, validation_data = (X_val, y_val))"
    ]
   },
   {
@@ -1983,6 +1983,318 @@
     "plt.grid()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c70e579-b569-429f-a36f-f3b60b149dcf",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### VGG16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a50ff657-e527-417c-9a8e-8365f6d34420",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_base_model = VGG16(include_top = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ce71a16-f881-4881-8b0d-ceb8a217b432",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_base_model.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8c07bbb-cecf-43e3-acae-1539c1f04e6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_inputs = Input(shape = (224, 224, 3))\n",
+    "\n",
+    "vgg16_x = data_augmentation(vgg16_inputs)\n",
+    "\n",
+    "vgg16_x = tf.keras.applications.vgg16.preprocess_input(vgg16_x)\n",
+    "\n",
+    "vgg16_x = vgg16_base_model(vgg16_x)\n",
+    "\n",
+    "vgg16_x = GlobalAveragePooling2D()(vgg16_x)\n",
+    "\n",
+    "vgg16_outputs = Dense(3, activation = 'softmax')(vgg16_x)\n",
+    "\n",
+    "vgg16_model = Model(vgg16_inputs, vgg16_outputs)\n",
+    "\n",
+    "vgg16_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80df9a75-5cf3-48ef-97d6-73dd9f5e6194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(vgg16_base_model.layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71710ddf-ff40-419c-a1d0-b8ee70fcc58d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_model.compile(loss = 'sparse_categorical_crossentropy',\n",
+    "              optimizer = Adam(learning_rate = 0.001),\n",
+    "              metrics = ['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48531e45-cccd-45e3-95a7-7dc34ddb2a13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_history = vgg16_model.fit(X_train_augmented, y_train_augmented, epochs = EPOCHS, validation_data = (X_val, y_val), batch_size=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f0dde7a-363e-4d80-a79f-33794435c328",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc = vgg16_history.history['accuracy']\n",
+    "val_acc = vgg16_history.history['val_accuracy']\n",
+    "\n",
+    "loss = vgg16_history.history['loss']\n",
+    "val_loss = vgg16_history.history['val_loss']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10ad42de-506f-4ac9-bcdc-9ef6a914056f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_accuracy_loss(vgg16_history)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f9600d7-cec5-495e-b454-4b79b29d606f",
+   "metadata": {},
+   "source": [
+    "#### Unfreeze and Fine-Tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb67818d-b1af-4bf0-9272-4e561e10cc7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_base_model.trainable = True\n",
+    "for layer in vgg16_base_model.layers[:-5]:\n",
+    "    layer.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eabaeb2d-957d-44dd-979b-43bcb38b6857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48d83886-1a5c-485a-b63e-e9a0bdb8f5ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_model.compile(loss = 'sparse_categorical_crossentropy',\n",
+    "                          optimizer = Adam(learning_rate = 0.0001),\n",
+    "                          metrics = ['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ede8bcf1-c3f1-4725-b483-667502e52635",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_history_fine = vgg16_model.fit(X_train_augmented, y_train_augmented, epochs = EPOCHS * 2, initial_epoch = EPOCHS, validation_data = (X_val, y_val), batch_size=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cd31ae2-9ece-4f76-92e5-e31ef3935bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc += vgg16_history_fine.history['accuracy']\n",
+    "val_acc += vgg16_history_fine.history['val_accuracy']\n",
+    "\n",
+    "loss += vgg16_history_fine.history['loss']\n",
+    "val_loss += vgg16_history_fine.history['val_loss']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc93cee5-351c-40db-b060-80ed7e84a071",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 8))\n",
+    "plt.subplot(2, 1, 1)\n",
+    "plt.plot(acc, label='Training Accuracy')\n",
+    "plt.plot(val_acc, label='Validation Accuracy')\n",
+    "plt.plot([EPOCHS-1,EPOCHS-1],\n",
+    "          plt.ylim(), label='Start Fine Tuning')\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.grid(True)\n",
+    "plt.title('Training and Validation Accuracy')\n",
+    "\n",
+    "plt.subplot(2, 1, 2)\n",
+    "plt.plot(loss, label='Training Loss')\n",
+    "plt.plot(val_loss, label='Validation Loss')\n",
+    "plt.plot([EPOCHS-1,EPOCHS-1],\n",
+    "         plt.ylim(), label='Start Fine Tuning')\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.title('Training and Validation Loss')\n",
+    "plt.grid(True)\n",
+    "plt.xlabel('epoch')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56e9a835-3889-4684-95f4-8ddd144c79b7",
+   "metadata": {},
+   "source": [
+    "#### Evaluate Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e4883d8-e30d-4868-a041-63a710a2d038",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_model.evaluate(X_test, y_test, batch_size=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8d12322-d856-47b5-927f-cf1dc8134d5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_probs = vgg16_model.predict(X_test, batch_size=8)\n",
+    "y_pred = np.argmax(y_pred_probs, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e2d3bd1-d70c-464f-bdcb-6eaacd8a7779",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Classification Report:\\n\")\n",
+    "print(classification_report(y_test, y_pred, target_names=class_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1030f9c8-48a0-4cbb-be80-55e94add1c5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "plt.figure(figsize=(8,6))\n",
+    "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues',\n",
+    "            xticklabels=class_names,\n",
+    "            yticklabels=class_names)\n",
+    "plt.xlabel('Predicted Label')\n",
+    "plt.ylabel('True Label')\n",
+    "plt.title('Confusion Matrix')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cfc09c8-0dd8-4f59-a96d-a3606f2e4dcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_classes = len(class_names)\n",
+    "\n",
+    "y_score = vgg16_model.predict(X_test, batch_size=8)\n",
+    "\n",
+    "y_test_bin = label_binarize(y_test, classes=np.arange(n_classes))\n",
+    "\n",
+    "fpr = dict()\n",
+    "tpr = dict()\n",
+    "roc_auc = dict()\n",
+    "for i in range(n_classes):\n",
+    "    if np.sum(y_test_bin[:, i]) == 0:\n",
+    "        print(f\"Skipping class {i} ({class_names[i]}): no positive samples in y_test.\")\n",
+    "        continue\n",
+    "    fpr[i], tpr[i], _ = roc_curve(y_test_bin[:, i], y_score[:, i])\n",
+    "    roc_auc[i] = auc(fpr[i], tpr[i])\n",
+    "\n",
+    "colors = cycle(['aqua', 'darkorange', 'cornflowerblue'])\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "for i, color in zip(roc_auc, colors):\n",
+    "    plt.plot(fpr[i], tpr[i], color=color, lw=2,\n",
+    "             label='ROC curve of class {0} (area = {1:0.2f})'\n",
+    "             ''.format(class_names[i], roc_auc[i]))\n",
+    "\n",
+    "plt.plot([0, 1], [0, 1], 'k--', lw=2)\n",
+    "plt.xlim([-0.05, 1.0])\n",
+    "plt.ylim([0.0, 1.05])\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('Multi-class ROC Curve')\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59345ea0-34bc-472f-9642-b94ad4fc6cc6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
